// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoaderProgress workspace creation flow snapshot 1`] = `
<div
  className="progress pf-v6-c-wizard"
>
  <nav
    aria-label="Workspace Progress Steps"
    className="pf-v6-c-wizard__nav"
  >
    <ol
      className="pf-v6-c-wizard__nav-list"
      role="list"
    >
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current="step"
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link pf-m-current"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-1"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                0
              </span>
              <span
                data-testid="step-name"
              >
                Creating step: Initialize
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current={false}
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-2"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Common step: Check running workspaces limit
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current={false}
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-3"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Creating step: Create workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
        <ol
          className="pf-v6-c-wizard__nav-list"
          role="list"
        >
          <li
            className="pf-v6-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={true}
              className="pf-v6-c-wizard__nav-link pf-m-disabled"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-4"
              data-ouia-component-type="PF6/WizardNavItem"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="pf-v6-c-wizard__nav-link-main"
              >
                <div
                  data-testid="progress-step"
                >
                  <span
                    data-testid="step-distance"
                  >
                    -1
                  </span>
                  <span
                    data-testid="step-name"
                  >
                    Creating step: Fetch devfile
                  </span>
                  <input
                    data-testid="onError"
                    name="onError"
                    onClick={[Function]}
                    type="button"
                    value="onError"
                  />
                  <input
                    data-testid="onRestart"
                    name="onRestart"
                    onClick={[Function]}
                    type="button"
                    value="onRestart"
                  />
                  <input
                    data-testid="onNextStep"
                    name=" onNextStep"
                    onClick={[Function]}
                    type="button"
                    value="onNextStep"
                  />
                </div>
              </span>
            </button>
          </li>
          <li
            className="pf-v6-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={true}
              className="pf-v6-c-wizard__nav-link pf-m-disabled"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-5"
              data-ouia-component-type="PF6/WizardNavItem"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="pf-v6-c-wizard__nav-link-main"
              >
                <div
                  data-testid="progress-step"
                >
                  <span
                    data-testid="step-distance"
                  >
                    -1
                  </span>
                  <span
                    data-testid="step-name"
                  >
                    Creating step: Check existing workspaces
                  </span>
                  <input
                    data-testid="onError"
                    name="onError"
                    onClick={[Function]}
                    type="button"
                    value="onError"
                  />
                  <input
                    data-testid="onRestart"
                    name="onRestart"
                    onClick={[Function]}
                    type="button"
                    value="onRestart"
                  />
                  <input
                    data-testid="onNextStep"
                    name=" onNextStep"
                    onClick={[Function]}
                    type="button"
                    value="onNextStep"
                  />
                </div>
              </span>
            </button>
          </li>
          <li
            className="pf-v6-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={true}
              className="pf-v6-c-wizard__nav-link pf-m-disabled"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-6"
              data-ouia-component-type="PF6/WizardNavItem"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="pf-v6-c-wizard__nav-link-main"
              >
                <div
                  data-testid="progress-step"
                >
                  <span
                    data-testid="step-distance"
                  >
                    -1
                  </span>
                  <span
                    data-testid="step-name"
                  >
                    Creating step: Apply devfile
                  </span>
                  <input
                    data-testid="onError"
                    name="onError"
                    onClick={[Function]}
                    type="button"
                    value="onError"
                  />
                  <input
                    data-testid="onRestart"
                    name="onRestart"
                    onClick={[Function]}
                    type="button"
                    value="onRestart"
                  />
                  <input
                    data-testid="onNextStep"
                    name=" onNextStep"
                    onClick={[Function]}
                    type="button"
                    value="onNextStep"
                  />
                </div>
              </span>
            </button>
          </li>
        </ol>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current={false}
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-7"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Start workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current={false}
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-8"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Open workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`LoaderProgress workspace starting flow snapshot 1`] = `
<div
  className="progress pf-v6-c-wizard"
>
  <nav
    aria-label="Workspace Progress Steps"
    className="pf-v6-c-wizard__nav"
  >
    <ol
      className="pf-v6-c-wizard__nav-list"
      role="list"
    >
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current="step"
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link pf-m-current"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-94"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                0
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Initialize
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current={false}
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-95"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Common step: Check running workspaces limit
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current={false}
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-96"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Start workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <button
          aria-current={false}
          aria-disabled={null}
          className="pf-v6-c-wizard__nav-link"
          data-ouia-component-id="OUIA-Generated-WizardNavItem-97"
          data-ouia-component-type="PF6/WizardNavItem"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Open workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </button>
      </li>
    </ol>
  </nav>
</div>
`;
